[package]
    edition = "2021"
    name    = "visible"
    version = "0.1.0"

[dependencies]
    itertools   = "0.12"
    paste       = "1.0"
    proc-macro2 = "1.0"
    quote       = "1.0"

[dependencies.syn]
    features = ["extra-traits", "full"]
    version  = "2.0"

[dependencies.proc-util]
    git     = "https://github.com/leakybits/proc-util"
    version = "0.3"

[lib]
    proc-macro = true

[lints.clippy]
    pedantic = "warn"
